# internal/api/http/route/routes.go
@@ -16,6 +16,7 @@
 package httproute
 
 import (
+	concertHandler "ticket-reservation/internal/api/http/handler/concert"
 	healthHandler "ticket-reservation/internal/api/http/handler/healthcheck"
 	"ticket-reservation/internal/api/http/middleware"
 	"ticket-reservation/internal/config"
@@ -31,11 +32,13 @@ type router struct {
 	cfg                config.AppConfig                 // Configuration for the application
 	Middleware         middleware.Middleware            // Middleware for handling requests
 	HealthCheckHandler healthHandler.HealthCheckHandler // Handler for health check routes
+	ConcertHandler     concertHandler.ConcertHandler    // Handler for concert routes
 }
 
 type Dependency struct {
 	Middleware         middleware.Middleware
 	HealthCheckHandler healthHandler.HealthCheckHandler
+	ConcertHandler     concertHandler.ConcertHandler
 }
 
 // NewHTTPRoutes creates a new instance of Router with the provided configuration and dependencies
@@ -44,12 +47,14 @@ func NewHTTPRoutes(cfg config.AppConfig, dep Dependency) Router {
 		cfg:                cfg,
 		Middleware:         dep.Middleware,
 		HealthCheckHandler: dep.HealthCheckHandler,
+		ConcertHandler:     dep.ConcertHandler,
 	}
 }
 
 // RegisterRoutes registers the routes for the application
 func (r *router) RegisterRoutes(router *gin.Engine) {
 	r.applyHealthCheckRoutes(router)
+	r.applyConcertRoutes(router)
 }
 
 // applyHealthCheckRoutes applies the health check routes to the provided router
@@ -58,5 +63,13 @@ func (r *router) applyHealthCheckRoutes(router *gin.Engine) {
 	{
 		healthRoute.GET("/liveness", r.Middleware.BasicAuth(r.cfg.AdminAPIKey, r.cfg.AdminAPISecret), r.HealthCheckHandler.Liveness)
 		healthRoute.GET("/readiness", r.Middleware.BasicAuth(r.cfg.AdminAPIKey, r.cfg.AdminAPISecret), r.HealthCheckHandler.Readiness)
+	}
+}
+
+// applyConcertRoutes applies the concert routes to the provided router
+func (r *router) applyConcertRoutes(router *gin.Engine) {
+	concertRoute := router.Group("/concerts")
+	{
+		concertRoute.POST("/", r.ConcertHandler.CreateConcert)
 	}
 }
